@refactor remove a handful of high priority findbugs warnings